[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/Camera.gd" type="Script" id=1]
[ext_resource path="res://player/ScreenShake.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 301 )

[node name="Camera2D" type="Camera2D"]
position = Vector2( 512, 301 )
current = true
process_mode = 0
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 1024, 600 )

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ScreenShake" parent="." instance=ExtResource( 2 )]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
